backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lib-backend-deployment
  namespace: harshith
  labels:
    app: lib-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lib-b
  template:
    metadata:
      labels:
        app: lib-b
    spec:
      containers:
        - name: lib-backend
          image: harshithreddy628/lib-backend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: harshith
spec:
  type: ClusterIP
  selector:
    app: lib-b
  ports:
    - port: 3000
      targetPort: 3000
