ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lib-app-ingress
  namespace: harshith
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host:  a8642be617edc4af1b63a3df38df1fa8-816474091.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
